--- a/src/components/breadcrumbs/breadcrumbs.head.scss
+++ b/src/components/breadcrumbs/breadcrumbs.head.scss
@@ -7,7 +7,7 @@
         display: inline-block;
 
         a{
-            color: #268500; //#2d9b00;
+            color: #2d9b00;
             font-size: 1.1rem;
         }
 
