--- a/src/components/aside/aside.head.scss
+++ b/src/components/aside/aside.head.scss
@@ -5,10 +5,6 @@
 
     h3{
         color: #333;
-
-        label{
-            display: block;
-        }
     }
 
     h4{
@@ -23,64 +19,20 @@
 }
 
 .aside-menu{
-    margin-bottom: -8px;
-
-    .cb-aside-menu{
-        display: block;
-
-        & + .am-menu{
-            // max-height: 0;
-        }
-
-        &:checked + .am-menu{
-            max-height: 1000px;
-        }
-    }
-
-    .title{
-        background: #288136; //#36b04a;
-        color: #fff;
-        text-transform: uppercase;
-        font-size: 13px;
-
-        margin: 0 -8px;
-        margin-top: -8px;
-        padding: 20px 16px;
-    }
-
+    font-size: 1.05rem;
     .am-menu{
 
         .am-list{
-            h4 a{
-                color: #595959 !important;
-            }
             &:hover > a{
-                color: #1e6800 !important;
+                color: #1e6800;
             }
             a.router-link-exact-active{
-                color: #268500 !important; //#2d9b00
+                color: #2d9b00;
             }
             & .am-menu{
                 // padding-top: 5px;
-                padding-left: 16px;
-                // height: 0;
-                max-height: 0;
-                overflow: hidden;
-
-                .am-list {
-                    a{
-                        color: #757575; //#818181;
-                    }
-                }
             }
 
-            .lb-aside-menu-child{
-                display: block;
-            }
-
-            .ra-input-idea:checked + .am-menu, .ra-input-menu:checked + .am-menu{
-                max-height: 1000px;
-            }
         }
 
     }
@@ -97,31 +49,17 @@
     }
 
     &.aside-ideas{
-        .am-list{
-
-            .am-list:hover{
-                a{
-                    color: #29a5de !important;
-
-                    .cb-label{
-                        &:before{
-                            // content: '☑';
-                        }
-                    }
-                }
-            }
+        // label{
             .cb-input{
                 display: none;
 
                 &:checked{
                     & + .cb-label:before{
-                        // color: #2d9b00;
-                        color: #29a5de;
+                        color: #2d9b00;
                         content : '☑';
                     }
                     & ~ :empty{
-                        // color: #2d9b00;
-                        color: #29a5de;
+                        color: #2d9b00;
                     }
                 }
             }
@@ -133,47 +71,11 @@
                 }
             }
             a.active{
-                // color: #2d9b00;
-                color: #29a5de !important;
+                color: #2d9b00;
                 // .cb-label:before{
                 //     content : '☑';
                 // }
             }
-        }
+        // }
     }
-}
-
-@media (max-width: 320px) {
-}
-
-@media (min-width: 768px) {
-}
-@media (min-width: 992px) {
-    .aside-menu{
-        margin-bottom: 0;
-
-        .title{
-            margin: 0 -16px;
-            margin-top: -16px;
-        }
-        .cb-aside-menu{
-
-            & + .am-menu{
-                max-height: unset;
-            }
-        }
-
-        .am-menu{
-            .am-list{
-                & .am-menu{
-                    // padding-top: 5px;
-                    max-height: 1000px;
-                }
-            }
-
-        }
-    }
-}
-
-@media (min-width: 1200px) {
 }
