--- a/src/views/ideas/ideas.scss
+++ b/src/views/ideas/ideas.scss
@@ -1,6 +1,6 @@
 .ideas-filters{
 	margin: -16px;
-	margin-bottom: 20px;
 	padding: 16px;
-    box-shadow: 0 1px 3px 0 #0002;
+	// margin-bottom: 20px;
+    // box-shadow: 0 1px 3px 0 #0002;
 }
