--- a/src/components/items/services/services.head.scss
+++ b/src/components/items/services/services.head.scss
@@ -202,7 +202,7 @@
                 position: relative;
                 overflow: hidden;
                 margin: 1px;
-                background: #f3f3f3 url(https://thicongtot.com/public/images/placeholder.svg) no-repeat center;
+                background: #f3f3f3 url(/public/images/placeholder.svg) no-repeat center;
 
                 img{
                     min-width: 100%;
