--- a/src/components/items/news/news.head.scss
+++ b/src/components/items/news/news.head.scss
@@ -15,7 +15,7 @@
             position: relative;
             overflow: hidden;
             display: block;
-            background: #f3f3f3 url(https://thicongtot.com/public/images/placeholder.svg) no-repeat center;
+            background: #f3f3f3 url(/public/images/placeholder.svg) no-repeat center;
 
             &:before{
                 display: block;
@@ -76,7 +76,7 @@
                 position: relative;
                 overflow: hidden;
                 display: block;
-                background: #f3f3f3 url(https://thicongtot.com/public/images/placeholder.svg) no-repeat center;
+                background: #f3f3f3 url(/public/images/placeholder.svg) no-repeat center;
 
                 &:before{
                     display: block;
