--- a/src/views/home/home.style.scss
+++ b/src/views/home/home.style.scss
@@ -71,6 +71,7 @@
                 width: 30px;
                 height: 30px;
                 box-shadow: 0 0 1px 0;
+                flex-shrink: 0;
                 img{
                     max-width: 100%;
                     max-height: 100%;
