--- a/src/views/authen/authen.scss
+++ b/src/views/authen/authen.scss
@@ -46,6 +46,7 @@
                 color: #2d9b00;
                 border: none;
                 padding: 10px;
+                cursor: pointer;
             }
             .forgot-password{
                 text-align: right;
